fixed a bug where the image covered the navbar when scrolling down

--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,10 @@ body{
     position: absolute;
     top: 150px;
     right: 100px;
-    height: auto;
-    width: auto;
+    height: 500px;
+    width: 500px;
     border-radius: 50%;
+    z-index: 0;
 }
 .css-icon{ 
     color: #264de4; }
@@ -192,6 +193,7 @@ body{
 #navbar{
     position:sticky;
     top:0;
+    z-index:10;
 }
 
 .intro{
